Revert "Condense collect.tolist()"
This reverts commit af2aa19a189a0189ebb6a56f8359f7837ff1e7b6.