@@ -10,6 +10,7 @@ import com.google.cloud.bigquery.Field;
 import com.google.cloud.bigquery.Schema;
 import com.google.cloud.bigquery.TableId;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CreateEntityMain extends BigQueryJob {
   private final Entity entity;
@@ -47,7 +48,7 @@ public class CreateEntityMain extends BigQueryJob {
                             columnSchema.getColumnName(),
                             BigQueryBeamUtils.fromDataType(columnSchema.getDataType()))
                         .build())
-            .toList();
+            .collect(Collectors.toList());
 
     // Build a clustering specification.
     List<String> clusterFields;
@@ -58,7 +59,7 @@ public class CreateEntityMain extends BigQueryJob {
               .map(
                   attribute ->
                       indexTable.getAttributeValueField(attribute.getName()).getColumnName())
-              .toList();
+              .collect(Collectors.toList());
     } else if (entity.hasTextSearch()) {
       // If not, and the text search field is defined, use that.
       clusterFields = List.of(indexTable.getTextSearchField().getColumnName());
