@@ -11,6 +11,7 @@ import com.google.common.collect.ImmutableMap;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.beam.sdk.Pipeline;
 import org.apache.beam.sdk.io.gcp.bigquery.BigQueryIO;
@@ -86,7 +87,7 @@ public final class BigQueryBeamUtils {
                       .setType(columnDataType.name())
                       .setMode(c.isRequired() ? "REQUIRED" : "NULLABLE");
                 })
-            .toList();
+            .collect(Collectors.toList());
     return new TableSchema().setFields(fieldSchemas);
   }
 
