@@ -56,6 +56,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -185,7 +186,9 @@ public class ReviewsApiController implements ReviewsApi {
     return ResponseEntity.ok(
         new ApiReviewInstanceListResult()
             .instances(
-                reviewQueryResult.getReviewInstances().stream().map(this::toApiObject).toList())
+                reviewQueryResult.getReviewInstances().stream()
+                    .map(this::toApiObject)
+                    .collect(Collectors.toList()))
             .sql(SqlFormatter.format(reviewQueryResult.getSql()))
             .pageMarker(
                 reviewQueryResult.getPageMarker() == null
@@ -218,7 +221,10 @@ public class ReviewsApiController implements ReviewsApi {
     Entity entity = underlay.getPrimaryEntity();
     List<Attribute> attributes = new ArrayList<>();
     if (apiObj.getIncludeAttributes() != null) {
-      attributes = apiObj.getIncludeAttributes().stream().map(entity::getAttribute).toList();
+      attributes =
+          apiObj.getIncludeAttributes().stream()
+              .map(entity::getAttribute)
+              .collect(Collectors.toList());
     }
 
     EntityFilter entityFilter =
@@ -322,6 +328,6 @@ public class ReviewsApiController implements ReviewsApi {
                 .criteriaGroupSections(
                     review.getRevision().getSections().stream()
                         .map(ToApiUtils::toApiObject)
-                        .toList()));
+                        .collect(Collectors.toList())));
   }
 }
