@@ -51,6 +51,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.tuple.Pair;
 
 public final class FromApiUtils {
@@ -95,7 +96,9 @@ public final class FromApiUtils {
               entity,
               entity.getAttribute(apiAttributeFilter.getAttribute()),
               naryOperator.get(),
-              apiAttributeFilter.getValues().stream().map(FromApiUtils::fromApiObject).toList());
+              apiAttributeFilter.getValues().stream()
+                  .map(FromApiUtils::fromApiObject)
+                  .collect(Collectors.toList()));
         }
 
         throw new InvalidQueryException(
@@ -127,13 +130,17 @@ public final class FromApiUtils {
                 underlay,
                 entity,
                 hierarchy,
-                apiHierarchyFilter.getValues().stream().map(FromApiUtils::fromApiObject).toList());
+                apiHierarchyFilter.getValues().stream()
+                    .map(FromApiUtils::fromApiObject)
+                    .collect(Collectors.toList()));
           case DESCENDANT_OF_INCLUSIVE:
             return new HierarchyHasAncestorFilter(
                 underlay,
                 entity,
                 hierarchy,
-                apiHierarchyFilter.getValues().stream().map(FromApiUtils::fromApiObject).toList());
+                apiHierarchyFilter.getValues().stream()
+                    .map(FromApiUtils::fromApiObject)
+                    .collect(Collectors.toList()));
           default:
             throw new SystemException(
                 "Unknown API hierarchy filter operator: " + apiHierarchyFilter.getOperator());
@@ -182,7 +189,7 @@ public final class FromApiUtils {
         List<EntityFilter> subFilters =
             apiBooleanLogicFilter.getSubfilters().stream()
                 .map(apiSubFilter -> fromApiObject(apiSubFilter, entity, underlay))
-                .toList();
+                .collect(Collectors.toList());
         switch (apiBooleanLogicFilter.getOperator()) {
           case NOT:
             if (subFilters.size() != 1) {
@@ -305,12 +312,12 @@ public final class FromApiUtils {
                     List<EntityFilter> subFiltersForOcc =
                         value.getSubfilters().stream()
                             .map(apiFilterForOcc -> fromApiObject(apiFilterForOcc, underlay))
-                            .toList();
+                            .collect(Collectors.toList());
                     subFiltersPerOccurrenceEntity.put(occurrenceEntity, subFiltersForOcc);
                     List<Attribute> groupByAttributesForOcc =
                         value.getGroupByCountAttributes().stream()
                             .map(occurrenceEntity::getAttribute)
-                            .toList();
+                            .collect(Collectors.toList());
                     groupByAttributesPerOccurrenceEntity.put(
                         occurrenceEntity, groupByAttributesForOcc);
                   });
