@@ -25,6 +25,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public final class ToApiUtils {
   private ToApiUtils() {}
@@ -91,7 +92,7 @@ public final class ToApiUtils {
         .criteriaGroupSections(
             cohort.getMostRecentRevision().getSections().stream()
                 .map(ToApiUtils::toApiObject)
-                .toList());
+                .collect(Collectors.toList()));
   }
 
   public static ApiCriteriaGroupSection toApiObject(
@@ -107,11 +108,13 @@ public final class ToApiUtils {
         .id(criteriaGroupSection.getId())
         .displayName(criteriaGroupSection.getDisplayName())
         .criteriaGroups(
-            criteriaGroupSection.getCriteriaGroups().stream().map(ToApiUtils::toApiObject).toList())
+            criteriaGroupSection.getCriteriaGroups().stream()
+                .map(ToApiUtils::toApiObject)
+                .collect(Collectors.toList()))
         .secondBlockCriteriaGroups(
             criteriaGroupSection.getSecondConditionCriteriaGroups().stream()
                 .map(ToApiUtils::toApiObject)
-                .toList())
+                .collect(Collectors.toList()))
         .operator(operator)
         .operatorValue(criteriaGroupSection.getJoinOperatorValue())
         .firstBlockReducingOperator(
@@ -131,7 +134,10 @@ public final class ToApiUtils {
     return new ApiCriteriaGroup()
         .id(criteriaGroup.getId())
         .displayName(criteriaGroup.getDisplayName())
-        .criteria(criteriaGroup.getCriteria().stream().map(ToApiUtils::toApiObject).toList());
+        .criteria(
+            criteriaGroup.getCriteria().stream()
+                .map(ToApiUtils::toApiObject)
+                .collect(Collectors.toList()));
   }
 
   public static ApiCriteria toApiObject(Criteria criteria) {
@@ -150,7 +156,9 @@ public final class ToApiUtils {
   public static ApiInstanceListResult toApiObject(ListQueryResult listQueryResult) {
     return new ApiInstanceListResult()
         .instances(
-            listQueryResult.getListInstances().stream().map(ToApiUtils::toApiObject).toList())
+            listQueryResult.getListInstances().stream()
+                .map(ToApiUtils::toApiObject)
+                .collect(Collectors.toList()))
         .sql(SqlFormatter.format(listQueryResult.getSqlNoParams()))
         .pageMarker(
             listQueryResult.getPageMarker() == null
@@ -226,7 +234,9 @@ public final class ToApiUtils {
   public static ApiInstanceCountList toApiObject(CountQueryResult countQueryResult) {
     return new ApiInstanceCountList()
         .instanceCounts(
-            countQueryResult.getCountInstances().stream().map(ToApiUtils::toApiObject).toList())
+            countQueryResult.getCountInstances().stream()
+                .map(ToApiUtils::toApiObject)
+                .collect(Collectors.toList()))
         .sql(SqlFormatter.format(countQueryResult.getSql()))
         .pageMarker(
             countQueryResult.getPageMarker() == null
