@@ -29,6 +29,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.apache.commons.text.StringSubstitutor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -81,7 +82,7 @@ public class DataExportHelper {
                                   entityOutput.getEntity(),
                                   attribute,
                                   false))
-                      .toList();
+                      .collect(Collectors.toList());
 
               ListQueryRequest listQueryRequest =
                   isAgainstSourceDataset
@@ -162,7 +163,7 @@ public class DataExportHelper {
                                       entityOutput.getEntity(),
                                       attribute,
                                       false))
-                          .toList();
+                          .collect(Collectors.toList());
                   return ListQueryRequest.againstIndexData(
                       exportRequest.getUnderlay(),
                       entityOutput.getEntity(),
@@ -269,7 +270,7 @@ public class DataExportHelper {
                                       entityOutput.getEntity(),
                                       attribute,
                                       false))
-                          .toList();
+                          .collect(Collectors.toList());
                   ListQueryRequest listQueryRequest =
                       ListQueryRequest.againstIndexData(
                           exportRequest.getUnderlay(),
