@@ -22,6 +22,7 @@ import bio.terra.tanagra.underlay.entitymodel.Entity;
 import bio.terra.tanagra.utils.ProtobufUtils;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @SuppressWarnings("PMD.TestClassWithoutTestCases")
 public class RegressionTest implements DataExport {
@@ -94,13 +95,15 @@ public class RegressionTest implements DataExport {
     return RTDataFeatureSet.DataFeatureSet.newBuilder()
         .setDisplayName(featureSet.getDisplayName())
         .addAllCriteria(
-            featureSet.getCriteria().stream().map(RegressionTest::toRegressionTestObj).toList())
+            featureSet.getCriteria().stream()
+                .map(RegressionTest::toRegressionTestObj)
+                .collect(Collectors.toList()))
         .addAllEntityOutputs(
             featureSet.getExcludeOutputAttributesPerEntity().entrySet().stream()
                 .map(
                     entry ->
                         toRegressionTestObj(underlay.getEntity(entry.getKey()), entry.getValue()))
-                .toList())
+                .collect(Collectors.toList()))
         .build();
   }
 
@@ -110,7 +113,7 @@ public class RegressionTest implements DataExport {
         entity.getAttributes().stream()
             .map(Attribute::getName)
             .filter(name -> !excludedAttributes.contains(name))
-            .toList();
+            .collect(Collectors.toList());
     return RTDataFeatureSet.EntityOutput.newBuilder()
         .setEntity(entity.getName())
         .addAllIncludedAttributes(includedAttributes)
@@ -123,7 +126,7 @@ public class RegressionTest implements DataExport {
         .addAllCriteriaGroupSections(
             cohort.getMostRecentRevision().getSections().stream()
                 .map(RegressionTest::toRegressionTestObj)
-                .toList())
+                .collect(Collectors.toList()))
         .build();
   }
 
@@ -133,7 +136,7 @@ public class RegressionTest implements DataExport {
         .addAllCriteriaGroups(
             criteriaGroupSection.getCriteriaGroups().stream()
                 .map(RegressionTest::toRegressionTestObj)
-                .toList())
+                .collect(Collectors.toList()))
         .setOperator(
             RTCriteria.BooleanLogicOperator.valueOf(criteriaGroupSection.getOperator().name()))
         .setIsExcluded(criteriaGroupSection.isExcluded())
@@ -144,7 +147,9 @@ public class RegressionTest implements DataExport {
       CohortRevision.CriteriaGroup criteriaGroup) {
     return RTCriteria.CriteriaGroup.newBuilder()
         .addAllCriteria(
-            criteriaGroup.getCriteria().stream().map(RegressionTest::toRegressionTestObj).toList())
+            criteriaGroup.getCriteria().stream()
+                .map(RegressionTest::toRegressionTestObj)
+                .collect(Collectors.toList()))
         .build();
   }
 
