@@ -58,7 +58,7 @@ public class FilterBuilderService {
                 criteria ->
                     new SelectionData(
                         criteria.getSelectorOrModifierName(), criteria.getSelectionData()))
-            .toList();
+            .collect(Collectors.toList());
 
     Underlay underlay = underlayService.getUnderlay(underlayName);
     FilterBuilder filterBuilder =
@@ -337,7 +337,7 @@ public class FilterBuilderService {
               includeAllAttributes
                   ? outputEntity.getAttributes().stream()
                       .filter(attribute -> !attribute.isSuppressedForExport())
-                      .toList()
+                      .collect(Collectors.toList())
                   : new ArrayList<>(value.getRight());
           EntityOutput entityOutput;
           if (filters.isEmpty()) {
@@ -394,7 +394,8 @@ public class FilterBuilderService {
     // together.
     EntityFilter combinedCohortFilter =
         buildFilterForCohortRevisions(
-            underlayName, cohorts.stream().map(Cohort::getMostRecentRevision).toList());
+            underlayName,
+            cohorts.stream().map(Cohort::getMostRecentRevision).collect(Collectors.toList()));
 
     // Build a combined filter per output entity from all the data feature sets.
     List<EntityOutputPreview> dataFeatureOutputPreviews =
@@ -422,7 +423,7 @@ public class FilterBuilderService {
                       outputEntityWithCohortFilter,
                       entityOutput.getAttributes()));
             })
-        .toList();
+        .collect(Collectors.toList());
   }
 
   public EntityFilter filterOutputByPrimaryEntity(
@@ -484,7 +485,7 @@ public class FilterBuilderService {
       List<Cohort> cohorts, List<FeatureSet> featureSets) {
     return buildOutputPreviewsForExport(cohorts, featureSets, false).stream()
         .map(EntityOutputPreview::getEntityOutput)
-        .toList();
+        .collect(Collectors.toList());
   }
 
   public EntityFilter buildFilterForPrimaryEntityId(
