@@ -29,6 +29,7 @@ import java.sql.Date;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -249,7 +250,7 @@ public class AnnotationServiceTest {
     List<AnnotationKey> allAnnotationKeyssSortedByDisplayNameAsc =
         allAnnotationKeys.stream()
             .sorted(Comparator.comparing(AnnotationKey::getDisplayName))
-            .toList();
+            .collect(Collectors.toList());
     assertEquals(allAnnotationKeys, allAnnotationKeyssSortedByDisplayNameAsc);
 
     // List selected annotation key for cohort2.
