@@ -24,6 +24,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -183,7 +184,9 @@ public class CohortServiceTest {
     assertEquals(2, allCohorts.size());
     LOGGER.info("cohorts found: {}, {}", allCohorts.get(0).getId(), allCohorts.get(1).getId());
     List<Cohort> allCohortsSortedByDisplayNameAsc =
-        allCohorts.stream().sorted(Comparator.comparing(Cohort::getDisplayName)).toList();
+        allCohorts.stream()
+            .sorted(Comparator.comparing(Cohort::getDisplayName))
+            .collect(Collectors.toList());
     assertEquals(allCohorts, allCohortsSortedByDisplayNameAsc);
 
     // List selected cohort in study2.
