@@ -53,6 +53,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import org.apache.http.NameValuePair;
 import org.apache.http.client.utils.URLEncodedUtils;
 import org.junit.jupiter.api.AfterEach;
@@ -602,7 +603,7 @@ public class DataExportServiceTest {
         primaryEntity.getAttributes().stream()
             .sorted(Comparator.comparing(Attribute::getName))
             .map(attribute -> new AttributeField(underlay, primaryEntity, attribute, false))
-            .toList();
+            .collect(Collectors.toList());
     return ListQueryRequest.againstIndexData(
         underlay, primaryEntity, selectFields, null, null, 5, null, null);
   }
