@@ -11,6 +11,7 @@ import bio.terra.tanagra.underlay.uiplugin.CriteriaSelector;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class EntityGroupFilterBuilder extends EntityGroupFilterBuilderBase {
   public EntityGroupFilterBuilder(CriteriaSelector criteriaSelector) {
@@ -36,7 +37,7 @@ public class EntityGroupFilterBuilder extends EntityGroupFilterBuilderBase {
   protected List<String> entityGroupIds() {
     return deserializeConfig().getClassificationEntityGroupsList().stream()
         .map(EntityGroupConfig::getId)
-        .toList();
+        .collect(Collectors.toList());
   }
 
   @Override
