@@ -34,6 +34,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.tuple.Pair;
 
 @SuppressFBWarnings(
@@ -128,7 +129,7 @@ public abstract class EntityGroupFilterBuilderBase extends FilterBuilder {
                     "Unsupported entity group type: " + entityGroup.getType());
             }
           });
-      return outputEntities.stream().map(EntityOutput::unfiltered).toList();
+      return outputEntities.stream().map(EntityOutput::unfiltered).collect(Collectors.toList());
     } else {
       // Check that there are no group by modifiers.
       Optional<Pair<CFUnhintedValue.UnhintedValue, DTUnhintedValue.UnhintedValue>>
@@ -246,12 +247,13 @@ public abstract class EntityGroupFilterBuilderBase extends FilterBuilder {
     if (!selectedIdsPerEntityGroup.isEmpty()) {
       selectedEntityGroups = new ArrayList<>(selectedIdsPerEntityGroup.keySet());
     } else {
-      selectedEntityGroups = entityGroupIds().stream().map(underlay::getEntityGroup).toList();
+      selectedEntityGroups =
+          entityGroupIds().stream().map(underlay::getEntityGroup).collect(Collectors.toList());
     }
 
     return selectedEntityGroups.stream()
         .sorted(Comparator.comparing(EntityGroup::getName))
-        .toList();
+        .collect(Collectors.toList());
   }
 
   private EntityFilter buildPrimaryWithCriteriaFilter(
