@@ -6,6 +6,7 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class SqlParams {
   private final Map<String, Literal> params = new HashMap<>();
@@ -27,6 +28,6 @@ public class SqlParams {
   public List<String> getParamNamesLongestFirst() {
     return params.keySet().stream()
         .sorted(Comparator.comparing(String::length).reversed())
-        .toList();
+        .collect(Collectors.toList());
   }
 }
