@@ -35,6 +35,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.tuple.Pair;
 
 @SuppressFBWarnings(
@@ -212,7 +213,7 @@ public final class Underlay {
                   szEntities.add(szEntity);
                   return fromConfigEntity(szEntity, szUnderlay.primaryEntity);
                 })
-            .toList();
+            .collect(Collectors.toList());
 
     // Check for the primary entity.
     if (entities.stream()
@@ -383,21 +384,21 @@ public final class Underlay {
                           && szAttribute.name.equals(szEntity.temporalQuery.visitIdAttribute),
                       sourceQuery);
                 })
-            .toList();
+            .collect(Collectors.toList());
 
     List<Attribute> optimizeGroupByAttributes = new ArrayList<>();
     if (szEntity.optimizeGroupByAttributes != null) {
       optimizeGroupByAttributes =
           attributes.stream()
               .filter(attribute -> szEntity.optimizeGroupByAttributes.contains(attribute.getName()))
-              .toList();
+              .collect(Collectors.toList());
     }
     List<Attribute> optimizeTextSearchAttributes = new ArrayList<>();
     if (szEntity.textSearch != null && szEntity.textSearch.attributes != null) {
       optimizeTextSearchAttributes =
           attributes.stream()
               .filter(attribute -> szEntity.textSearch.attributes.contains(attribute.getName()))
-              .toList();
+              .collect(Collectors.toList());
     }
 
     // Build the hierarchies.
@@ -413,7 +414,7 @@ public final class Underlay {
                           szHierarchy.keepOrphanNodes,
                           szHierarchy.rootNodeIds,
                           szHierarchy.cleanHierarchyNodesWithZeroCounts))
-              .toList();
+              .collect(Collectors.toList());
     }
     return new Entity(
         szEntity.name,
