@@ -7,6 +7,7 @@ import bio.terra.tanagra.underlay.NameHelper;
 import bio.terra.tanagra.underlay.serialization.SZBigQuery;
 import com.google.common.collect.ImmutableList;
 import java.util.Arrays;
+import java.util.stream.Collectors;
 
 public final class ITRelationshipIdPairs extends IndexTable {
   private static final String TABLE_NAME = "RIDS";
@@ -47,7 +48,8 @@ public final class ITRelationshipIdPairs extends IndexTable {
   @Override
   public ImmutableList<ColumnSchema> getColumnSchemas() {
     // Columns are static and don't depend on the entity.
-    return ImmutableList.copyOf(Arrays.stream(Column.values()).map(Column::getSchema).toList());
+    return ImmutableList.copyOf(
+        Arrays.stream(Column.values()).map(Column::getSchema).collect(Collectors.toList()));
   }
 
   public SqlField getEntityAIdField() {
