@@ -39,6 +39,7 @@ import bio.terra.tanagra.underlay.uiplugin.SelectionData;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -1062,7 +1063,7 @@ public class EntityGroupFilterBuilderForCriteriaOccurrenceTest {
                             occurrenceEntity,
                             null,
                             expectedCriteriaSubFilterSingleId)))
-            .toList();
+            .collect(Collectors.toList());
     assertEquals(expectedDataFeatureOutputs, dataFeatureOutputs);
 
     // Multiple ids, same entity group.
@@ -1103,7 +1104,7 @@ public class EntityGroupFilterBuilderForCriteriaOccurrenceTest {
                             occurrenceEntity,
                             null,
                             expectedCriteriaSubFilterMultipleIdsSameGroup)))
-            .toList();
+            .collect(Collectors.toList());
     assertEquals(expectedDataFeatureOutputs, dataFeatureOutputs);
 
     // Multiple ids, different entity groups.
@@ -1224,7 +1225,7 @@ public class EntityGroupFilterBuilderForCriteriaOccurrenceTest {
                                     occurrenceEntity.getAttribute("age_at_occurrence"),
                                     NaryOperator.BETWEEN,
                                     List.of(Literal.forDouble(45.0), Literal.forDouble(65.0)))))))
-            .toList();
+            .collect(Collectors.toList());
     assertEquals(expectedDataFeatureOutputs, dataFeatureOutputs);
   }
 
